[gd_scene load_steps=13 format=2]

[ext_resource path="res://Brick/Brick_Container.gd" type="Script" id=1]
[ext_resource path="res://Paddle/Paddle.tscn" type="PackedScene" id=2]
[ext_resource path="res://Ball/Ball_Container.gd" type="Script" id=3]
[ext_resource path="res://Game.gd" type="Script" id=4]
[ext_resource path="res://UI/Pause_Menu.tscn" type="PackedScene" id=5]
[ext_resource path="res://Wall/Wall.gd" type="Script" id=6]
[ext_resource path="res://UI/HUD.tscn" type="PackedScene" id=7]
[ext_resource path="res://UI/Instructions.tscn" type="PackedScene" id=8]
[ext_resource path="res://Camera2D.gd" type="Script" id=9]
[ext_resource path="res://Shader/Shader.gd" type="Script" id=10]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 100, 500 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 612, 100 )

[node name="Game" type="Node2D"]
script = ExtResource( 4 )

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2( 512, 400 )
current = true
script = ExtResource( 9 )

[node name="Timer" type="Timer" parent="Camera2D"]
wait_time = 0.05

[node name="Tween" type="Tween" parent="Camera2D"]

[node name="Tween2" type="Tween" parent="Camera2D"]

[node name="ColorRect" type="ColorRect" parent="."]
margin_right = 1024.0
margin_bottom = 800.0
color = Color( 0, 0, 0, 1 )

[node name="Wall_Container" type="Node2D" parent="."]

[node name="Wall_Left" type="StaticBody2D" parent="Wall_Container"]
script = ExtResource( 6 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Wall_Container/Wall_Left"]
position = Vector2( -100, 400 )
shape = SubResource( 1 )

[node name="Wall_Right" type="StaticBody2D" parent="Wall_Container"]
position = Vector2( 1024, 0 )
script = ExtResource( 6 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Wall_Container/Wall_Right"]
position = Vector2( 100, 400 )
shape = SubResource( 1 )

[node name="Wall_Top" type="StaticBody2D" parent="Wall_Container"]
position = Vector2( 4, -4 )
script = ExtResource( 6 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Wall_Container/Wall_Top"]
position = Vector2( 512, -100 )
shape = SubResource( 2 )

[node name="Brick_Container" type="Node2D" parent="."]
script = ExtResource( 1 )

[node name="Shader" type="Node2D" parent="."]
script = ExtResource( 10 )

[node name="Paddle_Container" type="Node2D" parent="."]

[node name="Paddle" parent="Paddle_Container" instance=ExtResource( 2 )]
position = Vector2( 512, 720 )

[node name="Ball_Container" type="Node2D" parent="."]
script = ExtResource( 3 )

[node name="UI" type="CanvasLayer" parent="."]

[node name="HUD" parent="UI" instance=ExtResource( 7 )]
pause_mode = 0

[node name="Pause_Menu" parent="UI" instance=ExtResource( 5 )]
visible = false

[node name="Instructions" parent="UI" instance=ExtResource( 8 )]
pause_mode = 2

[connection signal="timeout" from="Camera2D/Timer" to="Camera2D" method="_on_Timer_timeout"]
[connection signal="tween_completed" from="Camera2D/Tween" to="Camera2D" method="_on_Tween_tween_completed"]
